# lem-in

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  gen  lem-in  lem_in  map  map-bs  map_2  map_bogdan  map_gen  map_new  map_test  output  output_ac  temp_counter  temp_ocunter
bonus/: graph.py
general/includes/: lem_in.h
general/libftprintf/: Makefile
general/libftprintf/includes/: libft.h
general/libftprintf/srcs/: exp_util.c  ft_atoi.c  ft_error.c  ft_get_next_line.c  ft_lst_pb.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_putstr.c  ft_strisonlydigit.c  ft_strsplit.c  ft_w.c
general/srcs/: bellman_ford.c  convert_structure.c  convert_structure2.c  copy_paths.c  count_steps.c  debug.c  delete_copies.c  delete_disjoint.c  dublicate_nodes.c  dynamic_array.c  edge.c  edge_2.c  find_edge.c  find_edge_functions.c  flags.c  get_edge.c  main.c  make_paths.c  print_nodes.c  reading.c  reading_b.c  reading_check_after.c  reading_help_functions.c  reading_link.c  reading_room.c  reading_struct_helper.c  run_ants.c  service.c  service_2.c  set_in_way.c  solution.c  solve.c  suurbale.c  t_node.c  var.c
